fix: update active button styles for improved visibility

--- a/src/app/Modules/dashboard/Components/Funding_requests/taps/taps.scss
+++ b/src/app/Modules/dashboard/Components/Funding_requests/taps/taps.scss
@@ -22,8 +22,8 @@
 }
 
 .active {
-  border: 1px solid #124959 !important;
-  font-weight: 500;
+  border: 2px solid #124959 !important;
+  font-weight:bold;
   font-size: 16px;
 }
 
